Now possible to configure and install the storage part.

--- a/templates/etc/carbon/carbon-relay.conf
+++ b/templates/etc/carbon/carbon-relay.conf
@@ -46,10 +46,10 @@ USE_FLOW_CONTROL = True
 # Set this to True to enable whitelisting and blacklisting of metrics in
 # CONF_DIR/whitelist and CONF_DIR/blacklist. If the whitelist is missing or
 # empty, all metrics will pass through
-# USE_WHITELIST = False
+USE_WHITELIST = False
 
 # By default, carbon itself will log statistics (such as a count,
 # metricsReceived) with the top level prefix of 'carbon' at an interval of 60
 # seconds. Set CARBON_METRIC_INTERVAL to 0 to disable instrumentation
-# CARBON_METRIC_PREFIX = carbon
-# CARBON_METRIC_INTERVAL = 60
+CARBON_METRIC_PREFIX = carbon
+CARBON_METRIC_INTERVAL = 60
